--- a/CoolTool/CoolTool/Sources/Third Party/CoolTool/Resources/en.lproj/CoolTool.strings
+++ b/CoolTool/CoolTool/Sources/Third Party/CoolTool/Resources/en.lproj/CoolTool.strings
@@ -1,5 +1,5 @@
 "ENTER_UI_DEBUG_MODE" = "Enter UI debug mode";
 "ENTER" = "Enter";
 "CANCEL" = "Cancel";
-"MAIL_SUBJECT" = "I find bug in design here";
+"MAIL_SUBJECT" = "I find a bug in design here";
 "MAIL_BODY" = "Bug in this place on picture in attachment";
